# python-data-analysis-course

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  sidebars.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
docs/bonus/: capstone-ai-agent.md  index.mdx
docs/bonus/2026-ai-agent/: _category_.json  index.md
docs/bonus/2027-finetune-llm/: _category_.json  index.md
docs/data-analysis/: index.md  index.mdx
docs/data-analysis/hard/: _category_.json  week-10.md  week-6.md  week-7.md  week-8.md  week-9.md
docs/data-analysis/normal/: week-10.md  week-6.md  week-7.md  week-8.md  week-9.md
docs/projects/: index.mdx
docs/projects/agentic-code-reviewer/: _category_.json  index.md
docs/projects/ai-agent/: _category_.json  index.md
docs/projects/codebase-knowledge-graph/: _category_.json  index.md
docs/projects/docs-qa-bot/: _category_.json  index.md
docs/projects/email-triage-agent/: _category_.json  index.md
docs/projects/finetune-llm-unsloth/: _category_.json  index.md
docs/projects/github-issue-triage-agent/: _category_.json  index.md
docs/projects/mcp-server/: _category_.json  index.md
docs/projects/meeting-notes-summarizer/: _category_.json  index.md
docs/projects/ml-classifier/: _category_.json  index.md
docs/projects/multi-agent-research/: _category_.json  index.md
docs/projects/rag-notes/: _category_.json  index.md
docs/projects/recipe-planner-agent/: _category_.json  index.md
docs/projects/scrape-analyze/: _category_.json  index.md
docs/projects/study-buddy-agent/: _category_.json  index.md
docs/projects/voice-to-task-agent/: _category_.json  index.md
docs/python-101/: index.md  index.mdx
examples/2027-finetune-llm/: .gitignore  README.md  build_dataset.py  pyproject.toml
examples/agentic-code-reviewer/: .env.example  README.md  notebook.ipynb  pyproject.toml  review.py
examples/ai-agent/: .env.example  README.md  notebook.ipynb
examples/capstone-agent/: .env.example  README.md  agent.py  pyproject.toml
examples/codebase-knowledge-graph/: .gitignore  README.md  build_graph.py  notebook.ipynb  pyproject.toml
examples/codebase-knowledge-graph/sample_repo/: main.py  models.py  utils.py
examples/docs-qa-bot/: .env.example  .gitignore  README.md  bot.py  build_index.py  notebook.ipynb  prepare_docs.py  pyproject.toml  retrieve.py
examples/docs-qa-bot/docs/: course-structure.md  discord-bot-basics.md  rag-recap.md
examples/email-triage-agent/: .env.example  .gitignore  README.md  fetch_from_imap.py  notebook.ipynb  pyproject.toml  triage.py
examples/email-triage-agent/sample_emails/: 01_urgent_client.txt  02_newsletter.txt  03_needs_reply_coworker.txt  04_spammy_promo.txt  05_needs_reply_scheduling.txt  06_fyi_no_reply.txt
examples/finetune-llm-unsloth/: README.md  infer.py  notebook.ipynb
examples/github-issue-triage-agent/: .env.example  README.md  notebook.ipynb  pyproject.toml  triage.py
examples/mcp-server/: README.md  notebook.ipynb  pyproject.toml  server.py
examples/meeting-notes-summarizer/: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  summarize.py
examples/meeting-notes-summarizer/sample_transcripts/: incident_review.txt  product_planning.txt  standup.txt
examples/ml-classifier/: README.md  notebook.ipynb  pyproject.toml  train.py
examples/multi-agent-research/: README.md  agent.py  notebook.ipynb  pyproject.toml
examples/rag-notes/: .env.example  README.md  ask.py  build_index.py  notebook.ipynb  prepare_notes.py  pyproject.toml  retrieve.py
examples/rag-notes/notes/: pandas-groupby.md  python-tip-mutability.md
examples/recipe-planner-agent/: .env.example  README.md  notebook.ipynb  planner.py  pyproject.toml  recipes.py
examples/scrape-analyze/: .gitignore  README.md  analyze.py  notebook.ipynb  pyproject.toml  scrape.py
examples/student-agents/: README.md
examples/student-projects/: README.md
examples/study-buddy-agent/: .env.example  README.md  notebook.ipynb  pyproject.toml  study_buddy.py
examples/study-buddy-agent/notes/: cell-biology.txt  python-dictionaries.txt  world-war-two-pacific.txt
examples/voice-to-task-agent/: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  voice_to_tasks.py
i18n/ar/: code.json
i18n/es/: code.json
i18n/fr/: code.json
jupyterlite-config/: jupyter_lite_config.json  overrides.json
jupyterlite-config/files/: data-analysis-hard-week-10.ipynb  data-analysis-hard-week-6.ipynb  data-analysis-hard-week-7.ipynb  data-analysis-hard-week-8.ipynb  data-analysis-hard-week-9.ipynb  data-analysis-normal-week-10.ipynb  data-analysis-normal-week-6.ipynb  data-analysis-normal-week-7.ipynb  data-analysis-normal-week-8.ipynb  data-analysis-normal-week-9.ipynb  students-performance.csv  titanic.csv
plan/: README.md  capstones.md  code-organization.md  content-pattern.md  content-style-guide.md  context.md  deferred.md  deployment.md  development-workflow.md  discoverability.md  gamification.md  i18n.md  learning-path-flow.md  persistence.md  playground.md  pwa.md  section-1-python-101.md  section-2-data-analysis.md  seo.md  sharing-progress.md  site-structure.md  testing-and-verification.md  visual-design-ux.md
src/context/: CurrentDocContext.tsx  UiModeContext.tsx
src/css/: custom.css
src/data/: projects.ts
src/hooks/: useBadges.ts  useLocalStorage.ts  useQuizScore.ts  useSharePayload.ts  useStudentIdentity.ts  useUnlockCondition.ts
src/pages/: credits.tsx  index.module.css  index.tsx  progress.tsx  share.tsx
src/theme/: Root.tsx
src/types/: progress.ts  quiz.ts  share.ts
src/utils/: badges.ts  describeBadge.ts  generateId.ts  playgroundUrls.ts  quizScoring.ts  shareEncoding.ts  storageKeys.ts  weekId.ts  weeks.ts
static/: CNAME  llms.txt  manifest.json  robots.txt
static/datasets/: slm-corpus.csv  students-normal.csv
tests/e2e/: helpers.ts  locale-redirect.spec.ts  localstorage-roundtrip.spec.ts  placement-quiz-gate.spec.ts  playground-fab.spec.ts  ui-mode-toggle.spec.ts
(+210 files in other folders)
