[project]
name = "finetune-llm"
version = "0.1.0"
description = "Local companion to the course's 2027 Capstone: build a small fine-tuning dataset, then load and run the resulting LoRA adapter locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "huggingface-hub>=0.27.0",
    "peft>=0.14.0",
    "transformers>=4.48.0",
    "torch>=2.5.0",
]
