[project]
name = "agentic-code-reviewer"
version = "0.1.0"
description = "A CLI tool that reviews a git diff with a free-tier LLM, the fuller companion to the course's Agentic Code Reviewer project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "openai>=2.8.0",
]
