[project]
name = "capstone-agent"
version = "0.1.0"
description = "Minimal tool-calling AI agent example for the course's Capstone Bonus, built with LangChain's deepagents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
