[project]
name = "docs-qa-bot"
version = "0.1.0"
description = "Local companion to the course's 'Build a RAG-Backed Docs Q&A Discord Bot' project: reuses the RAG App project's local-embedding retrieval pipeline, wrapped in a live discord.py bot instead of a CLI script."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4.0",
    "sentence-transformers>=3.3.1",
    "numpy>=2.2.0",
    "python-dotenv>=1.2.2",
    "openai>=1.59.0",
]
