[project]
name = "multi-agent-research"
version = "0.1.0"
description = "A small multi-agent research assistant -- planner, researcher, and writer sub-agents built with LangChain's deepagents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.5",
    "python-dotenv>=1.2.2",
]
