[project]
name = "recipe-planner-agent"
version = "0.1.0"
description = "Real-World Project example: a tool-using recipe-planning agent grounded in a local recipe database, built with LangChain's deepagents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.5",
    "python-dotenv>=1.2.2",
]
